fix is_blocked column display issue

--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -31,6 +31,9 @@
     "Query Time": "查询时间",
     "Reply Code": "回应码",
     "Is Blocked": "是否阻止",
+    "Blocked":"已阻止",
+    "Allowed":"未阻止",
+    "All":"全部",
     "Pause": "暂停",
     "Resume": "恢复",
     "Clear": "清空",
