fix(i18n): remove invalid escape characters in de-DE translation.json
Error: Turbopack build failed with 1 errors:
./public/locales/de-DE/translation.json
Code generation for chunk item errored
An error occurred while generating the chunk item [project]/public/locales/de-DE/translation.json (json)

Caused by:
- Unable to make a module from invalid JSON: invalid escape at line 121 column 42

Debug info:
- An error occurred while generating the chunk item [project]/public/locales/de-DE/translation.json (json)
- Execution of <JsonChunkItem as EcmascriptChunkItem>::content failed
- Unable to make a module from invalid JSON: invalid escape at line 121 column 42
    at ?
     117 |   "Error loading data": "Fehler beim Laden der Daten",
     118 |   "Not implemented yet.": "Nicht Implementiert.",
     119 |   "Delete client {{id}} {{client_ip}} successfully.": "Client {{id}} {{client_ip}} gelöscht.",
     120 |   "Server request processing has been suspended, please check whether there is enough disk space.": "Bearbeitung unterbrochen. Prüfen Sie, ob genutz Platz auf dem Laufwerk ist.",
         |                                          v
     121 +   "Audit log is not enabled, please set \`audit-enable\` to \`yes\` in smartdns config file.": "Audit-Log is inaktiv. Setzen Sie \`audit-enable\` auf \`yes\` in der smartdns.conf-Datei.",
         |                                          ^
     122 |   "QPS": "QPS",
     123 |   "UI Version": "UI-Version",
     124 |   "Server Version": "Server-Version"
     125 | }

Import trace:
  Client Component SSR:
    ./public/locales/de-DE/translation.json
    ./src/components/core/i18n.tsx [Client Component SSR]
    ./src/components/dashboard/upstream-servers/upstream-servers-table.tsx [Client Component SSR]
    ./src/app/dashboard/upstream-servers/page.tsx [Client Component SSR]
    ./src/app/dashboard/upstream-servers/page.tsx [Server Component]


    at ignore-listed frames
make[2]: *** [Makefil

--- a/public/locales/de-DE/translation.json
+++ b/public/locales/de-DE/translation.json
@@ -118,7 +118,7 @@
   "Not implemented yet.": "Nicht Implementiert.",
   "Delete client {{id}} {{client_ip}} successfully.": "Client {{id}} {{client_ip}} gelöscht.",
   "Server request processing has been suspended, please check whether there is enough disk space.": "Bearbeitung unterbrochen. Prüfen Sie, ob genutz Platz auf dem Laufwerk ist.",
-  "Audit log is not enabled, please set \`audit-enable\` to \`yes\` in smartdns config file.": "Audit-Log is inaktiv. Setzen Sie \`audit-enable\` auf \`yes\` in der smartdns.conf-Datei.",
+  "Audit log is not enabled, please set `audit-enable` to `yes` in smartdns config file.": "Audit-Log is inaktiv. Setzen Sie `audit-enable` auf `yes` in der smartdns.conf-Datei.",
   "QPS": "QPS",
   "UI Version": "UI-Version",
   "Server Version": "Server-Version"
