--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -28,6 +28,7 @@
     "Time": "时间",
     "Ping": "Ping",
     "Group": "组",
+    "Default": "默认",
     "Query Time": "查询时间",
     "Reply Code": "回应码",
     "Is Blocked": "是否阻止",
@@ -92,6 +93,8 @@
     "Not found": "未找到",
     "Cannot find whois.": "找不到 whois。",
     "Whois data not available": "Whois 数据不可用",
+    "whois": "WHOIS 查询",
+    "Mac Vendor": "Mac 供应商",
     "Registrar": "注册商",
     "Country": "国家",
     "Delete query log {{id}} {{domain}} successfully.": "删除查询日志 {{id}} {{domain}} 成功。",
