Add translations for Default and Mac Vendor

--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -28,6 +28,7 @@
     "Time": "时间",
     "Ping": "Ping",
     "Group": "组",
+    "Default": "默认",
     "Query Time": "查询时间",
     "Reply Code": "回应码",
     "Is Blocked": "是否阻止",
@@ -92,6 +93,7 @@
     "Not found": "未找到",
     "Cannot find whois.": "找不到 whois。",
     "Whois data not available": "Whois 数据不可用",
+    "whois": "WHOIS 查询",
     "Registrar": "注册商",
     "Country": "国家",
     "Delete query log {{id}} {{domain}} successfully.": "删除查询日志 {{id}} {{domain}} 成功。",
@@ -120,6 +122,7 @@
     "ID": "ID",
     "Mac Address": "MAC 地址",
     "Host Name": "主机名",
+    "Mac Vendor": "Mac 供应商",
     "Last Query Time": "最后查询时间",
     "Error loading data": "加载数据时出错",
     "Not implemented yet.": "尚未实现。",
